tests/specs/test/junit_console_formatting/main.out
Check [WILDCARD]main.ts
<?xml version="1.0" encoding="UTF-8"?>
<testsuites name="deno test" tests="1" failures="1" errors="0" time="[WILDCARD]">
    <testsuite name="./main.ts" tests="1" disabled="0" errors="0" failures="1">
        <testcase name="test" classname="./main.ts" time="[WILDCARD]" line="1" col="6">
            <failure message="Uncaught Error: Oh No Red Error">Error: Oh No Red Error
  throw new Error(&quot;Oh No \x1b[31mRed\x1b[0m Error&quot;);
        ^
    at [WILDCARD]</failure>
        </testcase>
    </testsuite>
</testsuites>
error: Test failed
